# ChangeLog for media-video/ffmpeg
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.475 2011/10/23 08:18:24 xarthisius Exp $

  23 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
  +files/ffmpeg-0.7.6-fix_ppc64_32ul.patch, ffmpeg-0.7.6.ebuild:
  (non-maintainer commit) Backport patch that allows build system to properly
  detect arch on ppc64 with 32ul. Fixes bug 341235 and 387207

  21 Oct 2011; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  bump x264 dep

  15 Oct 2011; Alexis Ballier <aballier@gentoo.org> -ffmpeg-0.7.5.ebuild,
  -ffmpeg-0.8.4.ebuild:
  remove old

  12 Oct 2011; Raúl Porcel <armin76@gentoo.org> ffmpeg-0.7.6.ebuild:
  alpha/ia64/sparc stable wrt #385511

  10 Oct 2011; Markus Meier <maekke@gentoo.org> ffmpeg-0.7.6.ebuild:
  arm stable, bug #385511

  09 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> ffmpeg-0.7.6.ebuild:
  ppc/ppc64 stable wrt #385511

  08 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> ffmpeg-0.7.6.ebuild:
  x86 stable wrt security bug #385511

  07 Oct 2011; Jeroen Roovers <jer@gentoo.org> ffmpeg-0.7.6.ebuild:
  Stable for HPPA (bug #385511).

  06 Oct 2011; Steve Dibb <beandog@gentoo.org> ffmpeg-0.7.6.ebuild:
  amd64 stable, bug 385511

  05 Oct 2011; Alexis Ballier <aballier@gentoo.org> ffmpeg-9999.ebuild:
  add libmodplug support

*ffmpeg-0.8.5 (05 Oct 2011)
*ffmpeg-0.7.6 (05 Oct 2011)

  05 Oct 2011; Alexis Ballier <aballier@gentoo.org> +ffmpeg-0.7.6.ebuild,
  +ffmpeg-0.8.5.ebuild:
  version bump

  05 Oct 2011; Alexis Ballier <aballier@gentoo.org> -ffmpeg-0.7.3.ebuild,
  -ffmpeg-0.7.4.ebuild, -ffmpeg-0.8.2.ebuild, -ffmpeg-0.8.3.ebuild:
  remove old

  02 Oct 2011; Raúl Porcel <armin76@gentoo.org> ffmpeg-0.7.5.ebuild:
  alpha/arm/ia64/sparc stable wrt #384095

  28 Sep 2011; Kacper Kowalik <xarthisius@gentoo.org> ffmpeg-0.7.5.ebuild:
  ppc/ppc64 stable wrt #384095
