@@ -1,6 +1,11 @@
 # ChangeLog for media-video/ffmpeg
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.475 2011/10/23 08:18:24 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/ffmpeg/ChangeLog,v 1.476 2011/11/01 00:37:26 ssuominen Exp $
+
+  01 Nov 2011; Samuli Suominen <ssuominen@gentoo.org> ffmpeg-0.7.6.ebuild,
+  ffmpeg-0.8.5.ebuild, ffmpeg-9999.ebuild:
+  Rename USE="v4l2" to USE="v4l" while removing support for video4linux 1.x wrt
+  #385241
 
   23 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org>
   +files/ffmpeg-0.7.6-fix_ppc64_32ul.patch, ffmpeg-0.7.6.ebuild:
